<resources>
    <string name="app_name">Thisavrós</string>
    <string name="book_name">Book Name</string>
    <string name="book_author">Book Author</string>
    <string name="title_activity_user">UserActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="thumbnail_image">thumbnail image</string>
    <string name="book_price">Book Price</string>
    <string name="book_summary">Book Summary</string>
    <string name="email">email</string>
    <string name="backdrop">backdrop</string>
    <string name="user">User</string>
    <string name="name">Thisavrós</string>
</resources>