<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/img_back_photo"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/backdrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_user_photo"
            android:layout_width="250dp"
            android:layout_height="250dp"
            tools:src="@tools:sample/avatars"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"/>

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textSize="16sp">
        </TextView>

    </LinearLayout>

</RelativeLayout>